src/window/snapshots/tvision__window__window__tests__joined_splitter_active_frame_uses_mixed_tees.snap
---
source: src/window/window.rs
expression: screen.snapshot()
---
size: 16x6
cursor: hidden
text:
|╔═[■]═══╤══[↑]═╗|
|║       │      ║|
|║ AAAAAA│ BBBBB║|
|║ AAAAAA│ BBBBB║|
|║ AAAAAA│ BBBBB║|
|└─══════╧═════─┘|
attr:
|aaabaaaaaaaabaaa|
|aaaaaaaacaaaaaaa|
|aaddddddcaddddda|
|aaddddddcaddddda|
|aaddddddcaddddda|
|bbaaaaaaaaaaaabb|
legend:
  . default
  a fg=RGB(255,255,255) bg=RGB(0,0,170)
  b fg=RGB(85,255,85) bg=RGB(0,0,170)
  c fg=RGB(170,170,170) bg=RGB(0,0,170)
  d fg=RGB(0,0,0) bg=RGB(0,170,170)
